--- a/PowerCoreServer/jsfs.html
+++ b/PowerCoreServer/jsfs.html
@@ -1958,8 +1958,8 @@ html,body{
 }
 img{
   display:block;
-  width:100%; height:100%;
-  object-fit: cover;
+  width:-webkit-fill-available;
+  object-fit: contain;
 }
 </style>
 </head>
